changes in home page

--- a/index.html
+++ b/index.html
@@ -106,10 +106,12 @@
                 <h1 class="home-page-welcome-name"><span>Scott Laidler</span></h1>
                 <h3 class="home-page-welcome-quote"><span> — I Take The Guesswork Out of Health &amp; Fitness</span></h3>
             <div class="">
-                <p class="home-page-intro">Start your fitness journey to a stronger body and healthy habits
-                  Personalised workouts, realistic nutrition and results you can maintain forever ... without sacrificing your lifestyle.It's time to finally build that strong, lean body you've wanted for a long time. </p>
-                <p class="home-page-work-with-you">Let me guide you to results through Online Coaching.</p>
-                <button type="button" class="btn home-page-welcome-learn-more">Learn More</button>
+                <p class="home-page-intro">
+                  Personalised workouts, realistic nutrition and results you can maintain forever ... without sacrificing your lifestyle. </p>
+                  <!-- <p class="home-page-intro">It's time to finally build that strong, lean body you've wanted for a long time.Let me guide you to results through Online Coaching</p> -->
+                <p class="home-page-work-with-you"> Start your fitness journey to a stronger body and healthy habits .</p>
+                <a href="/get-started.html" class="btn home-page-welcome-btn">Let's Talk</a>
+                <a href="/contact.html" class="btn home-page-welcome-btn">Contact Us</a>
             </div>
                 <!-- <div class="banner-content"> -->
                     <!-- <h2 class="heading h1">To find the best opportunities, <br>we <span>created</span> our own.
@@ -139,34 +141,76 @@
 </section>
 
 <!-- Our Programs -->
-<section class="services-section">
+<!-- <section class="services-section">
   <div class="container">
     <h2 class="services-heading">
       Our Services
     </h2>
     <div class="services">
       <div class="ind-services">
-        <div class="services-image"><svg class="svg-inline--fa fa-weight-scale" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="weight-scale" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" data-fa-i2svg=""><path fill="currentColor" d="M128 176a128 128 0 1 1 256 0 128 128 0 1 1 -256 0zM391.8 64C359.5 24.9 310.7 0 256 0S152.5 24.9 120.2 64H64C28.7 64 0 92.7 0 128V448c0 35.3 28.7 64 64 64H448c35.3 0 64-28.7 64-64V128c0-35.3-28.7-64-64-64H391.8zM296 224c0-10.6-4.1-20.2-10.9-27.4l33.6-78.3c3.5-8.1-.3-17.5-8.4-21s-17.5 .3-21 8.4L255.7 184c-22 .1-39.7 18-39.7 40c0 22.1 17.9 40 40 40s40-17.9 40-40z"></path></svg><!-- <i class="fa-solid fa-weight-scale"></i> Font Awesome fontawesome.com --></div>
+        <div class="services-image"><svg class="svg-inline--fa fa-weight-scale" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="weight-scale" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" data-fa-i2svg=""><path fill="currentColor" d="M128 176a128 128 0 1 1 256 0 128 128 0 1 1 -256 0zM391.8 64C359.5 24.9 310.7 0 256 0S152.5 24.9 120.2 64H64C28.7 64 0 92.7 0 128V448c0 35.3 28.7 64 64 64H448c35.3 0 64-28.7 64-64V128c0-35.3-28.7-64-64-64H391.8zM296 224c0-10.6-4.1-20.2-10.9-27.4l33.6-78.3c3.5-8.1-.3-17.5-8.4-21s-17.5 .3-21 8.4L255.7 184c-22 .1-39.7 18-39.7 40c0 22.1 17.9 40 40 40s40-17.9 40-40z"></path></svg></div>
 
-        <h3>WEIGHT MANAGEMENT</h3>
+        <h4>WEIGHT MANAGEMENT</h4>
         <p>We offer complete techniques and solutions for gaining muscle or losing fat with proper fitness guidance, Healthy substitutes / options, slight modification in your dietary habits, lifestyle management and creative workout techniques to keep your interest and motivational level going on to achieve desired body weight with gradual, systematic and organized approach.</p>
       </div>
       <div class="ind-services">
         <div class="services-image">
-          <svg class="svg-inline--fa fa-nutritionix" aria-hidden="true" focusable="false" data-prefix="fab" data-icon="nutritionix" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 400 512" data-fa-i2svg=""><path fill="currentColor" d="M88 8.1S221.4-.1 209 112.5c0 0 19.1-74.9 103-40.6 0 0-17.7 74-88 56 0 0 14.6-54.6 66.1-56.6 0 0-39.9-10.3-82.1 48.8 0 0-19.8-94.5-93.6-99.7 0 0 75.2 19.4 77.6 107.5 0 .1-106.4 7-104-119.8zm312 315.6c0 48.5-9.7 95.3-32 132.3-42.2 30.9-105 48-168 48-62.9 0-125.8-17.1-168-48C9.7 419 0 372.2 0 323.7 0 275.3 17.7 229 40 192c42.2-30.9 97.1-48.6 160-48.6 63 0 117.8 17.6 160 48.6 22.3 37 40 83.3 40 131.7zM120 428c0-15.5-12.5-28-28-28s-28 12.5-28 28 12.5 28 28 28 28-12.5 28-28zm0-66.2c0-15.5-12.5-28-28-28s-28 12.5-28 28 12.5 28 28 28 28-12.5 28-28zm0-66.2c0-15.5-12.5-28-28-28s-28 12.5-28 28 12.5 28 28 28 28-12.5 28-28zM192 428c0-15.5-12.5-28-28-28s-28 12.5-28 28 12.5 28 28 28 28-12.5 28-28zm0-66.2c0-15.5-12.5-28-28-28s-28 12.5-28 28 12.5 28 28 28 28-12.5 28-28zm0-66.2c0-15.5-12.5-28-28-28s-28 12.5-28 28 12.5 28 28 28 28-12.5 28-28zM264 428c0-15.5-12.5-28-28-28s-28 12.5-28 28 12.5 28 28 28 28-12.5 28-28zm0-66.2c0-15.5-12.5-28-28-28s-28 12.5-28 28 12.5 28 28 28 28-12.5 28-28zm0-66.2c0-15.5-12.5-28-28-28s-28 12.5-28 28 12.5 28 28 28 28-12.5 28-28zM336 428c0-15.5-12.5-28-28-28s-28 12.5-28 28 12.5 28 28 28 28-12.5 28-28zm0-66.2c0-15.5-12.5-28-28-28s-28 12.5-28 28 12.5 28 28 28 28-12.5 28-28zm0-66.2c0-15.5-12.5-28-28-28s-28 12.5-28 28 12.5 28 28 28 28-12.5 28-28zm24-39.6c-4.8-22.3-7.4-36.9-16-56-38.8-19.9-90.5-32-144-32S94.8 180.1 56 200c-8.8 19.5-11.2 33.9-16 56 42.2-7.9 98.7-14.8 160-14.8s117.8 6.9 160 14.8z"></path></svg><!-- <i class="fa-brands fa-nutritionix"></i> Font Awesome fontawesome.com -->
+          <svg class="svg-inline--fa fa-nutritionix" aria-hidden="true" focusable="false" data-prefix="fab" data-icon="nutritionix" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 400 512" data-fa-i2svg=""><path fill="currentColor" d="M88 8.1S221.4-.1 209 112.5c0 0 19.1-74.9 103-40.6 0 0-17.7 74-88 56 0 0 14.6-54.6 66.1-56.6 0 0-39.9-10.3-82.1 48.8 0 0-19.8-94.5-93.6-99.7 0 0 75.2 19.4 77.6 107.5 0 .1-106.4 7-104-119.8zm312 315.6c0 48.5-9.7 95.3-32 132.3-42.2 30.9-105 48-168 48-62.9 0-125.8-17.1-168-48C9.7 419 0 372.2 0 323.7 0 275.3 17.7 229 40 192c42.2-30.9 97.1-48.6 160-48.6 63 0 117.8 17.6 160 48.6 22.3 37 40 83.3 40 131.7zM120 428c0-15.5-12.5-28-28-28s-28 12.5-28 28 12.5 28 28 28 28-12.5 28-28zm0-66.2c0-15.5-12.5-28-28-28s-28 12.5-28 28 12.5 28 28 28 28-12.5 28-28zm0-66.2c0-15.5-12.5-28-28-28s-28 12.5-28 28 12.5 28 28 28 28-12.5 28-28zM192 428c0-15.5-12.5-28-28-28s-28 12.5-28 28 12.5 28 28 28 28-12.5 28-28zm0-66.2c0-15.5-12.5-28-28-28s-28 12.5-28 28 12.5 28 28 28 28-12.5 28-28zm0-66.2c0-15.5-12.5-28-28-28s-28 12.5-28 28 12.5 28 28 28 28-12.5 28-28zM264 428c0-15.5-12.5-28-28-28s-28 12.5-28 28 12.5 28 28 28 28-12.5 28-28zm0-66.2c0-15.5-12.5-28-28-28s-28 12.5-28 28 12.5 28 28 28 28-12.5 28-28zm0-66.2c0-15.5-12.5-28-28-28s-28 12.5-28 28 12.5 28 28 28 28-12.5 28-28zM336 428c0-15.5-12.5-28-28-28s-28 12.5-28 28 12.5 28 28 28 28-12.5 28-28zm0-66.2c0-15.5-12.5-28-28-28s-28 12.5-28 28 12.5 28 28 28 28-12.5 28-28zm0-66.2c0-15.5-12.5-28-28-28s-28 12.5-28 28 12.5 28 28 28 28-12.5 28-28zm24-39.6c-4.8-22.3-7.4-36.9-16-56-38.8-19.9-90.5-32-144-32S94.8 180.1 56 200c-8.8 19.5-11.2 33.9-16 56 42.2-7.9 98.7-14.8 160-14.8s117.8 6.9 160 14.8z"></path></svg>
 
         </div>
-        <h3>NUTRITIONAL GUIDANCE</h3>
+        <h4>NUTRITIONAL GUIDANCE</h4>
         <p>We offer appropriate type of diet plan for every meal with required nutritional information to suit or fulfil your body requirements based on your body type. This will include creating alternatives to unhealthy eatables and realistic plan to suit your lifestyle and food preferences.</p>
       </div>
       <div class="ind-services">
         <div class="services-image">
-          <svg class="svg-inline--fa fa-user" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="user" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" data-fa-i2svg=""><path fill="currentColor" d="M224 256A128 128 0 1 0 224 0a128 128 0 1 0 0 256zm-45.7 48C79.8 304 0 383.8 0 482.3C0 498.7 13.3 512 29.7 512H418.3c16.4 0 29.7-13.3 29.7-29.7C448 383.8 368.2 304 269.7 304H178.3z"></path></svg><!-- <i class="fa-solid fa-user"></i> Font Awesome fontawesome.com -->
+          <svg class="svg-inline--fa fa-user" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="user" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" data-fa-i2svg=""><path fill="currentColor" d="M224 256A128 128 0 1 0 224 0a128 128 0 1 0 0 256zm-45.7 48C79.8 304 0 383.8 0 482.3C0 498.7 13.3 512 29.7 512H418.3c16.4 0 29.7-13.3 29.7-29.7C448 383.8 368.2 304 269.7 304H178.3z"></path></svg>
         </div>
 
-        <h3>BODY SCULPTING / TRANSFORMATION</h3>
+        <h4>BODY SCULPTING / TRANSFORMATION</h4>
         <p>Body sculpting is an art. You can Tone, shape, sharpen or sculpt your body under the able guidance of our well Trained instructors.Scott offers unique/creative techniques of core-strengthening exercises’ which forms the base of your body transformation to any desired shape as per your requirement.</p>
       </div>
+    </div>
+  </div>
+</section> -->
+
+
+<section class="services-section">
+  <div class="container">
+    <h2 class="services-heading">
+      Whatever your goals, we accomplish them together.
+    </h2>
+    <div class="services">
+      <div class="ind-services">
+        <div class="services-image">
+          <img src="/assets/images/yulissa-tagle-F0WzpR-GJl8-unsplash.jpg" alt="">
+          </div>
+          <div class="services-content">
+        <h4>Fat loss</h4>
+        <p>Our results demonstrate why we are global leaders in fast and effective fat loss. This is not a quick fix though, it’s backed by decades of experience and hard science.</p>
+        <a href="" class="btn">Learn More</a>
+        </div>
+      </div>
+      <div class="ind-services">
+        <div class="services-image">
+          <img src="/assets/images/alonso-reyes-0HlI76m4jxU-unsplash.jpg" alt="">
+        </div>
+        <div class="services-content">
+          <h4>Muscle building
+          </h4>
+          <p>If you have wasted years trying in vain to gain size – stop! Our proven formula for maximum muscle growth is the fast-track you need for the physique you desire.</p>
+          <a href="" class="btn">Learn More</a>
+        </div>
+      </div>
+      <div class="ind-services">
+        <div class="services-image">
+          <img src="/assets/images/madison-lavern-4gcqRf3-f2I-unsplash.jpg" alt="">
+        </div>
+        <div class="services-content">
+        <h4>Improve health</h4>
+        <p>Good health is our most valuable asset. Whether you want to overcome obesity, diabetes, hypertension or high cholesterol, we deliver quantifiable results to improve your health that will pay dividends for life.</p>
+        <a href="" class="btn">Learn More</a>
+      </div>
+    </div>
     </div>
   </div>
 </section>
@@ -188,26 +232,16 @@
       <div class="home-page-about-content">
         <h2 class="home-page-about-heading">Hi, I'm Scott Laidler</h2>
         <div>
-          <p class="home-page-about-para-1">I help ordinary people build extraordinary bodies without sacrificing their lifestyle and
-            social events.</p>
+          <p class="home-page-about-para-1">Online fat loss coach, experienced personal trainer, and mentor to the hundreds of men and women who have decided to stand up and make a change.</p>
           <p class="home-page-about-para-2">Sign up for Online Coaching and let me help you build muscle, get stronger, lose excess
             weight and live a healthy lifestyle. I'll give you all the personalised workouts, nutrition guidance and
             motivation you need. We'll work with realistic methods, which means you'll get results you can maintain
-            forever. Real advice. Real results.</p>
+            forever. <strong>Real advice. Real results.</strong></p>
           <p class="home-page-about-para-3">I help ordinary people build extraordinary bodies without sacrificing their lifestyle and
             social events.</p>
-          <p class="home-page-about-para-4">You get:</p>
-          <ol class="home-page-about-benefit">
-            <li>&nbsp;Results! Build muscle, get stronger, lose weight, tone up and live a healthy lifestyle</li>
-            <li>&nbsp;Personalised workouts with weekly adjustments</li>
-            <li>&nbsp;Personalised nutrition guidance</li>
-            <li>&nbsp;Weekly check-in call with me</li>
-            <li>&nbsp;Weekly goals, that ensure progress every week</li>
-            <li>&nbsp;Tracking of your progress</li>
-            <li>&nbsp;24/7 contact with me</li>
-          </ol>
+          
         </div>
-        <p>With over 10 years experience as a personal trainer & nutrition professional (specialised in the plant based diet), I can help you take your fitness to the next level, regain confidence and create a consistent routine.</p>
+        <p>With over 10 years experience as a personal trainer & nutrition professional, I can help you take your fitness to the next level, regain confidence and create a consistent routine.</p>
       </div>
     </div>
   </div>
@@ -257,10 +291,6 @@
                             </div>
                         </div>
                 </div>
-            </div>
-            <div class="home-page-why-us-image">
-                <img src="/assets/images/pexels-jane-trang-doan-1092730.webp"
-                    alt="">
             </div>
         </div>
     </div>
@@ -320,7 +350,7 @@
 <!-- Steps Section -->
 
 <!-- How can I help Section  -->
-<section class="home-page-how-can-i-help-section">
+<!-- <section class="home-page-how-can-i-help-section">
   <div class="container">
     <h2 class="home-page-how-can-i-help-heading">How I can Help</h2>
     <div>
@@ -371,7 +401,7 @@
       </div>
     </div>
   </div>
-</section>
+</section> -->
 
 <!-- How can I help Section  -->
 
@@ -689,7 +719,9 @@
 
     </main>
     <footer class="footer">
-        <a href="#" id="backToTopBtn" class="backToTopBtn" >↑</a>
+        <a href="#" id="backToTopBtn" class="backToTopBtn" >
+          <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 448 512"><path d="M201.4 137.4c12.5-12.5 32.8-12.5 45.3 0l160 160c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L224 205.3 86.6 342.6c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3l160-160z"/></svg>
+        </a>
         <div class="container">
             <div class="footer-wrapper">
                 <div class="">
