changes in nav bar load time issue

--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
           </button>
 
         <div class="b collapse navbar-collapse" id="navbar-collapse">
-          <a class="mobile-header-logo" href="#">
+          <!-- <a class="mobile-header-logo" href="#">
             <span>Scott Laidler</span>
-          </a>
+          </a> -->
             <ul class="navbar-nav">
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="index.html">Home</a>
