changed inamge to webp

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
     <div class="services">
       <div class="ind-services">
         <div class="services-image">
-          <img src="/assets/images/yulissa-tagle-F0WzpR-GJl8-unsplash.jpg" alt="">
+          <img src="/assets/images/yulissa-tagle-F0WzpR-GJl8-unsplash.webp" alt="">
           </div>
           <div class="services-content">
         <h4>Fat loss</h4>
@@ -192,7 +192,7 @@
       </div>
       <div class="ind-services">
         <div class="services-image">
-          <img src="/assets/images/alonso-reyes-0HlI76m4jxU-unsplash.jpg" alt="">
+          <img src="/assets/images/alonso-reyes-0HlI76m4jxU-unsplash.webp" alt="">
         </div>
         <div class="services-content">
           <h4>Muscle building
@@ -203,7 +203,7 @@
       </div>
       <div class="ind-services">
         <div class="services-image">
-          <img src="/assets/images/madison-lavern-4gcqRf3-f2I-unsplash.jpg" alt="">
+          <img src="/assets/images/madison-lavern-4gcqRf3-f2I-unsplash.webp" alt="">
         </div>
         <div class="services-content">
         <h4>Improve health</h4>
