--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#4285f4" />
     <!-- <link rel="icon" type="image/png" sizes="32x32" href="assets/images/W-image.png"> -->
     <!-- <link rel="icon" href="demo_icon.gif" type="image/gif" > -->
 
