--- a/index.html
+++ b/index.html
@@ -5,8 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AbhifitOnline - Personal Online Coaching</title>
 </head>
-<body style="background-image: url(/assets/images/under-maintenance.jpg);">
-    <!-- <img src="/assets/images/under-maintenance.jpg" alt="under-maintenance"> -->
-    <h1 style="font-family: Arial, Helvetica, sans-serif;text-align: center;vertical-align: middle;color: white;font-size: 80px">Website under maintenance</h1>
+<style>
+    body{
+        background-image: url('/assets/images/under-maintenance.jpg');
+    }
+    h1{
+        font-family: Arial, Helvetica, sans-serif;
+        text-align: center;
+        color: white;
+        font-size: 80px;
+    }
+    @media screen and (max-width:767px) {
+        body{
+            background-image: url('/assets/images/mob-under-maintenance.jpg');
+        }
+        h1{
+            font-family: Arial, Helvetica, sans-serif;
+            text-align: center;
+            font-size: 40px;
+        }
+    }
+</style>
+<body>
+    <h1>Website under maintenance</h1>
 </body>
 </html>
