changed image in mob

--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
     }
     @media screen and (max-width:767px) {
         body{
-            background-image: url('/assets/images/mob-under-maintenance.jpg');
+            background-image: url('/assets/images/under-construction-2629947_1920.jpg');
+            background-size: cover;
+        background-position-y: bottom;
         }
         h1{
             font-family: Arial, Helvetica, sans-serif;
