--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="FPyD15dlsbToDFeOwQm5He3I--eA9G6741UFQozJu8U" />
     <meta name="theme-color" content="#4285f4" />
     <!-- <link rel="icon" type="image/png" sizes="32x32" href="assets/images/W-image.png"> -->
     <!-- <link rel="icon" href="demo_icon.gif" type="image/gif" > -->
@@ -40,7 +41,7 @@
 </head>
 <body>
     <header class="header">
-      <div class="container-fluid header-contact-info">
+      <!-- <div class="container-fluid header-contact-info">
         <div class="header-email"><a href="mailto:info@scottlaidler.com" class="anchor mail">info@scottlaidler.com</a></div>
         <div class="header-phone">
         <a href="tel:+1234567890" class="anchor number">+1234567890</a>
@@ -52,13 +53,14 @@
         </a>
         </div>
 
-      </div>
+      </div> -->
       <hr>
       <nav class="navbar" id="navbar">
         <div class="container-fluid">
         <div class="header-logo">
             <a class="navbar-brand header-logo" href="#">
-                <img src="/assets/images/logo.png" alt="Bootstrap" width="60" height="60">
+                <img src="/assets/images/Layer 1 Frame.png" alt="Bootstrap" width="60" height="60">
+                <!-- <img src="/assets/images/logo.png" alt="Bootstrap" width="60" height="60"> -->
             </a>
         </div>
 
@@ -124,7 +126,7 @@
                 <!-- </div> -->
             </div>
             <div class="home-page-welcome-image">
-                <img src="/assets/images/pexels-wildlittlethingsphoto-1790446.jpg" alt="" class="">
+                <img src="/assets/images/20241023_181500_0000.jpg" alt="" class="">
                 <!-- <div class="hero-slider">
                     <div class="item">
                         <img src="assets/images/hero-img.png" alt="Hero Image">
@@ -747,7 +749,8 @@
                 </div>
                 <div class="footer-logo-div">
                     <a href="index.html" class="footer-logo-a">
-                        <img src="assets/images/logo.png" alt="logo" class="footer-logo-img">
+                        <!-- <img src="assets/images/logo.png" alt="logo" class="footer-logo-img"> -->
+                        <img src="assets/images/Layer 1 Frame.png" alt="logo" class="footer-logo-img">
                     </a>
                 </div>
                 <div class="">
