--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- non-Retina iPhone, iPod Touch, and Android 2.1+ devices: -->
     <link rel="apple-touch-icon" href="favicon_black_144x144.png" />
     <!-- basic favicon -->
-    <link rel="icon" href="assets/images/favicon_black_144x144.png" />
+    <link rel="icon" href="assets/images/logos/favicon_black_72x72.png" />
 
     <!-- Base CSS -->
     <!-- <link rel="stylesheet" href="/assets/css/base/base-minified.css"> -->
@@ -37,14 +37,14 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Glide.js/3.2.0/css/glide.core.css" integrity="sha512-ShLuspGzRsTiMlQ2Rg0e+atjy/gVQr3oYKnKmQkHQ6sxcnDAEOtOaPz2rRmeygV2CtnwUawDyHkGgH4zUbP3Hw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <title>Scott Laider - Home Page</title>
+    <title>AbhifitOnline - Peronsal Online Coaching</title>
 </head>
 <body>
     <header class="header">
       <!-- <div class="container-fluid header-contact-info">
-        <div class="header-email"><a href="mailto:info@scottlaidler.com" class="anchor mail">info@scottlaidler.com</a></div>
+        <div class="header-email"><a href="" class="anchor mail"></a></div>
         <div class="header-phone">
-        <a href="tel:+1234567890" class="anchor number">+1234567890</a>
+        <a href="tel:" class="anchor number"></a>
         <a class="anchor navbar-brand" href="#">
           <svg class="header-logo" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="phone" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" data-fa-i2svg=""><path fill="currentColor" d="M164.9 24.6c-7.7-18.6-28-28.5-47.4-23.2l-88 24C12.1 30.2 0 46 0 64C0 311.4 200.6 512 448 512c18 0 33.8-12.1 38.6-29.5l24-88c5.3-19.4-4.6-39.7-23.2-47.4l-96-40c-16.3-6.8-35.2-2.1-46.3 11.6L304.7 368C234.3 334.7 177.3 277.7 144 207.3L193.3 167c13.7-11.2 18.4-30 11.6-46.3l-40-96z"></path></svg>
         </a>
@@ -59,8 +59,7 @@
         <div class="container-fluid">
         <div class="header-logo">
             <a class="navbar-brand header-logo" href="#">
-                <img src="/assets/images/logo_white.png" alt="Bootstrap" width="60" height="60">
-                <!-- <img src="/assets/images/logo.png" alt="Bootstrap" width="60" height="60"> -->
+                <img src="/assets/images/logos/logo_white_397x397.png" alt="AbhifitOnline logo" width="60" height="60">
             </a>
         </div>
 
@@ -77,22 +76,19 @@
                     <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/about.html">About</a>
+                    <a class="nav-link" href="#">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/services.html">Services</a>
+                    <a class="nav-link" href="#">Coaching Options</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/plans.html">Plans and Pricing</a>
+                    <a class="nav-link" href="#">Transformations</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/transformations.html">Transformations</a>
+                    <a class="nav-link" href="#">Contact Us</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/contact.html">Contact Us</a>
-                </li>
-                <li class="nav-item">
-                    <a class="" href="/get-started.html">Get Started</a>
+                    <a class="" href="#">Get Started</a>
                 </li>
             </ul>
         </div>
@@ -106,27 +102,21 @@
     <div class="container">
         <div class="home-page-welcome-main-div">
             <div class="home-page-welcome-content">
-                <h1 class="home-page-welcome-name"><span>Scott Laidler</span></h1>
-                <h3 class="home-page-welcome-quote"><span> — I Take The Guesswork Out of Health &amp; Fitness</span></h3>
+                <h1 class="home-page-welcome-name"><span>Hi, I’m Abhinav</span></h1>
+                <h3 class="home-page-welcome-quote"><span>Founder and head coach at the ABHIFITONLINE.
+                  I’m a qualified nutritionist, experienced fat loss and strength coach.
+                  </span></h3>
             <div class="">
                 <p class="home-page-intro">
-                  Personalised workouts, realistic nutrition and results you can maintain forever ... without sacrificing your lifestyle. </p>
+                  For over 8 years, Abhifit has delivered life changing results to people of all ages and fitness levels and have transformed the physiques of 500+ people.</p>
                   <!-- <p class="home-page-intro">It's time to finally build that strong, lean body you've wanted for a long time.Let me guide you to results through Online Coaching</p> -->
-                <p class="home-page-work-with-you"> Start your fitness journey to a stronger body and healthy habits .</p>
-                <a href="/get-started.html" class="btn home-page-welcome-btn">Let's Talk</a>
-                <a href="/contact.html" class="btn home-page-welcome-btn">Contact Us</a>
+                <p class="home-page-work-with-you"> AS YOUR ONLINE PERSONAL TRAINER, I WILL DO THE SAME FOR YOU</p>
+                <a href="" class="btn home-page-welcome-btn">Try ABHIFIT</a>
+                <a href="" class="btn home-page-welcome-btn">Contact Us</a>
             </div>
-                <!-- <div class="banner-content"> -->
-                    <!-- <h2 class="heading h1">To find the best opportunities, <br>we <span>created</span> our own.
-                    </h2>
-                    <p class="has-big-font">Our preferred listed investment company (LIC) structure provides a
-                        permanent, stable pool of capital. Investors in LICs also benefit from fully franked
-                        dividends paid over time.</p>
-                    <a href="#" class="underlineBtn">Discover How</a> -->
-                <!-- </div> -->
             </div>
             <div class="home-page-welcome-image">
-                <img src="/assets/images/20241023_181500_0000.jpg" alt="" class="">
+                <img src="/assets/images/self/20241023_181500_0000.jpg" alt="" class="">
                 <!-- <div class="hero-slider">
                     <div class="item">
                         <img src="assets/images/hero-img.png" alt="Hero Image">
