changes in intrio section

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-site-verification" content="FPyD15dlsbToDFeOwQm5He3I--eA9G6741UFQozJu8U" />
-    <meta name="theme-color" content="#4285f4" />
+    <meta name="theme-color" content="var(--clr-theme-5)" />
     <!-- <link rel="icon" type="image/png" sizes="32x32" href="assets/images/W-image.png"> -->
     <!-- <link rel="icon" href="demo_icon.gif" type="image/gif" > -->
 
