--- a/index.html
+++ b/index.html
@@ -122,7 +122,27 @@
     </div>
 </section>
 
-<!-- Our Programs -->
+<!-- Philosophy section -->
+<section class="home-page-philosophy-section">
+  <div class="container">
+    <div class="home-page-philosophy-section-content">
+      <div>
+        <img src="/assets/images/self/_MG_3530_1.JPG">
+        <p>There are so many reasons why sticking to a fitness or food programme can be challenging, and my philosophy has always been to keep things simple. My principles have helped change hundreds of peoples lives all around the world.
+        </p>
+      </div>
+      <div>
+        <h2>A LIFESTYLE CHANGE YOU CAN ACTUALLY STICK TO</h2>
+        <p>I believe everyone can live their best life and the body they dream of, with the right coaching, diet and fitness program. This is why I am passionate about giving you the right advice, all the knowledge and personal tools you need to get you started on your journey and the mindset to succeed!</p>
+        <p>I understand every client is different and not one size fits all. That’s why I offer a variety of services and programs tailored to your specific goals and needs ensuring you achieve real, lifelong improvements to your health, body and life!</p>
+        <p>Together with the right coaching and support we can achieve your personal goals and give you back your confidence. If you need help choosing which coaching option is the best for you just drop me a message or click the ‘get in touch’ link below!
+        </p>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- Philosophy section -->
+<!-- Our Programs //services -->
 <section class="services-section" style="display: none;">
   <div class="container">
     <h2 class="services-heading">
@@ -163,7 +183,7 @@
     </div>
   </div>
 </section>
-<!-- Our Programs -->
+<!-- Our Programs //services -->
 
 <!-- About Section -->
 
@@ -525,7 +545,7 @@
 
 <section class="faq-section">
   <div class="container">
-    <p class="faq-subheading">ASK US ANYTHING</p>
+    <span class="faq-subheading">ASK US ANYTHING</span>
     <h2 class="faq-heading">FAQs</h2>
     <p class="faq-description">Most commonly asked questions about ABHIFIT</p>
     <div class="faq-row">
@@ -672,9 +692,11 @@ If you watch the interviews on our results page on /results you will read many s
     <span class="get-started-subheading">READY TO LOOK BETTER, FEEL BETTER AND PERFORM AT YOUR BEST?</span>
     <h2 class="get-started-heading">GET STARTED TODAY</h2>
     <!-- <p class="get-started-para">Please fill out the form below and let's start your new healthy lifestyle</p> -->
-    <!-- <p class="get-started-para">Have questions about our online fitness coaching?</p> -->
-    <p class="get-started-para">Call <a href="tel:"917696721404">917696721404</a> or fill the form to start your journey today!</p>
-    <div class="home-page-get-started-form-and-content">
+    <h3 class="get-started-para">Ready to discover the difference yourself?</h3>
+    <a href="https://wa.me/917696721404?text=Hi%2C+Abhinav.+I+am+interested+in+your+online+coaching.+I%27d+like+to+chat+with+you%21" class="btn large">LET'S BEGIN!</a>
+      <p class="get-started-para"> Or Call Us at <a href="tel:"917696721404">917696721404</a> </p>
+    <!-- <p class="get-started-para">Call <a href="tel:"917696721404">917696721404</a> or fill the form to start your journey today!</p> -->
+    <!-- <div class="home-page-get-started-form-and-content">
       <div class="home-page-get-started-content">
         
       </div>
@@ -698,8 +720,6 @@ If you watch the interviews on our results page on /results you will read many s
           </div>
           <div class="">
             <label for="your_goal" class="form-label">Your goal</label>
-            <!-- <div id="you_goal_help" class="you_goal_help"><small>What's your goal? (feel healthier, build lean muscle, lose weight etc).</small>
-            </div> -->
             <textarea class="form-field" id="your_goal" rows="3" placeholder="What's your goal? (feel healthier, build lean muscle, lose weight etc)."  name="goal"></textarea>
           </div>
           <input type="hidden" name="_next" value="abhifitonline.com/thanks/">
@@ -709,7 +729,7 @@ If you watch the interviews on our results page on /results you will read many s
           </div>
         </form>
       </div>
-    </div>
+    </div> -->
      
   </div>
   </div>
