--- a/index.html
+++ b/index.html
@@ -143,44 +143,30 @@
 </section>
 <!-- Philosophy section -->
 <!-- Our Programs //services -->
-<section class="services-section" style="display: none;">
+<section class="services-section">
   <div class="container">
     <h2 class="services-heading">
-      Whatever your goals, we accomplish them together.
+      COACHING OPTIONS
     </h2>
     <div class="services">
       <div class="ind-services">
-        <div class="services-image">
-          <img src="/assets/images/yulissa-tagle-F0WzpR-GJl8-unsplash.webp" alt="">
-          </div>
-          <div class="services-content">
-        <h4>Fat loss</h4>
-        <p>Our results demonstrate why we are global leaders in fast and effective fat loss. This is not a quick fix though, it’s backed by decades of experience and hard science.</p>
-        <a href="" class="btn">Learn More</a>
+        <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 512 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M256 48a208 208 0 1 1 0 416 208 208 0 1 1 0-416zm0 464A256 256 0 1 0 256 0a256 256 0 1 0 0 512zM369 209c9.4-9.4 9.4-24.6 0-33.9s-24.6-9.4-33.9 0l-111 111-47-47c-9.4-9.4-24.6-9.4-33.9 0s-9.4 24.6 0 33.9l64 64c9.4 9.4 24.6 9.4 33.9 0L369 209z"/></svg>
+          <h4>Online personal training</h4>
         </div>
-      </div>
       <div class="ind-services">
-        <div class="services-image">
-          <img src="/assets/images/alonso-reyes-0HlI76m4jxU-unsplash.webp" alt="">
+        <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 512 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M256 48a208 208 0 1 1 0 416 208 208 0 1 1 0-416zm0 464A256 256 0 1 0 256 0a256 256 0 1 0 0 512zM369 209c9.4-9.4 9.4-24.6 0-33.9s-24.6-9.4-33.9 0l-111 111-47-47c-9.4-9.4-24.6-9.4-33.9 0s-9.4 24.6 0 33.9l64 64c9.4 9.4 24.6 9.4 33.9 0L369 209z"/></svg>
+          <h4>Fat loss</h4>
         </div>
-        <div class="services-content">
-          <h4>Muscle building
-          </h4>
-          <p>If you have wasted years trying in vain to gain size – stop! Our proven formula for maximum muscle growth is the fast-track you need for the physique you desire.</p>
-          <a href="" class="btn">Learn More</a>
-        </div>
-      </div>
       <div class="ind-services">
-        <div class="services-image">
-          <img src="/assets/images/madison-lavern-4gcqRf3-f2I-unsplash.webp" alt="">
+        <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 512 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M256 48a208 208 0 1 1 0 416 208 208 0 1 1 0-416zm0 464A256 256 0 1 0 256 0a256 256 0 1 0 0 512zM369 209c9.4-9.4 9.4-24.6 0-33.9s-24.6-9.4-33.9 0l-111 111-47-47c-9.4-9.4-24.6-9.4-33.9 0s-9.4 24.6 0 33.9l64 64c9.4 9.4 24.6 9.4 33.9 0L369 209z"/></svg>
+          <h4>Nutrition</h4>
         </div>
-        <div class="services-content">
-        <h4>Improve health</h4>
-        <p>Good health is our most valuable asset. Whether you want to overcome obesity, diabetes, hypertension or high cholesterol, we deliver quantifiable results to improve your health that will pay dividends for life.</p>
-        <a href="" class="btn">Learn More</a>
-      </div>
+      <div class="ind-services">
+        <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 512 512"><!--!Font Awesome Free 6.7.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M256 48a208 208 0 1 1 0 416 208 208 0 1 1 0-416zm0 464A256 256 0 1 0 256 0a256 256 0 1 0 0 512zM369 209c9.4-9.4 9.4-24.6 0-33.9s-24.6-9.4-33.9 0l-111 111-47-47c-9.4-9.4-24.6-9.4-33.9 0s-9.4 24.6 0 33.9l64 64c9.4 9.4 24.6 9.4 33.9 0L369 209z"/></svg>
+          <h4>Muscle building</h4>
+        </div>
     </div>
-    </div>
+  </div>
   </div>
 </section>
 <!-- Our Programs //services -->
